bk_ida/gccida/g1/x86_field_alignment
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/x86_field_alignment/src/i386.c:13113:34: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( v4 == 16 || v4 == 22 || ( mode_class_0[( BYTE5( type->block.abstract_origin) >> 1) & 0x7F] & 0xFFFFFFFB) == 1) 
                                 ^~~~~~~~~~~~
                                 mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/x86_field_alignment/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/x86_field_alignment/src/obj/i386.o] Error 1
